<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_app"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:layout_gravity="top|center"
        android:src="@drawable/beacon_logo_splash" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/activity_login_editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_name"
            android:layout_marginLeft="@dimen/activity_login_margin"
            android:layout_marginRight="@dimen/activity_login_margin"
            android:background="@color/white"
            android:inputType="text|textCapWords"
            android:ems="10"
            android:paddingTop="@dimen/activity_login_padding"
            android:paddingBottom="@dimen/activity_login_padding"
            android:paddingLeft="@dimen/activity_login_padding"
            android:paddingRight="@dimen/activity_login_padding" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/activity_login_editText_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_lastName"
            android:layout_marginLeft="@dimen/activity_login_margin"
            android:layout_marginRight="@dimen/activity_login_margin"
            android:layout_marginTop="@dimen/activity_login_margin"
            android:background="@color/white"
            android:inputType="text|textCapWords"
            android:ems="10"
            android:paddingTop="@dimen/activity_login_padding"
            android:paddingBottom="@dimen/activity_login_padding"
            android:paddingLeft="@dimen/activity_login_padding"
            android:paddingRight="@dimen/activity_login_padding" />

        <EditText
            android:id="@+id/activity_login_editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_email"
            android:layout_marginLeft="@dimen/activity_login_margin"
            android:layout_marginRight="@dimen/activity_login_margin"
            android:layout_marginTop="@dimen/activity_login_margin"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:paddingTop="@dimen/activity_login_padding"
            android:paddingBottom="@dimen/activity_login_padding"
            android:paddingLeft="@dimen/activity_login_padding"
            android:paddingRight="@dimen/activity_login_padding" />

        <Spinner
            android:id="@+id/activity_login_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="@dimen/activity_login_margin"
            android:layout_marginRight="@dimen/activity_login_margin"
            android:layout_marginTop="@dimen/activity_login_margin"
            android:paddingTop="@dimen/activity_login_padding"
            android:paddingBottom="@dimen/activity_login_padding"
            android:drawSelectorOnTop="true"
            android:entries="@array/occupation_array" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_login_info"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_login_info_textSize"
            android:layout_marginTop="@dimen/activity_login_margin" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_login_button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:textSize="@dimen/activity_login_button_textSize"
        android:text="@string/activity_login_register"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>

